updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a student ot Coding Bootcamp</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born in Buffalo, New York</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Fishing, reading, playing guitar</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Author</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Midlothian, VA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To change careers to provide a better life for me and my daughter</p>
     </section>
 
     <footer id="footer">
